--- a/SPDEs.ipynb
+++ b/SPDEs.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,10 +30,10 @@
     "        self.sigma = sigma # sigma(u)*xi\n",
     "        self.BC = BC #Boundary condition 'D' - Dirichlet, 'N' - Neuman, 'P' - periodic\n",
     "        self.eps = eps # viscosity\n",
-    "        self.X = X\n",
-    "        self.T = T\n",
+    "        self.X = X # discretization of space (O_X space)\n",
+    "        self.T = T # discretization of time (O_T space)\n",
     "        \n",
-    "    def vectorized(self, f, vec): # vectorises non-linearity and applies it to the certain vector\n",
+    "    def vectorized(self, f, vec): # vectorises non-linearity and applies it to a certain vector\n",
     "        if f is None:\n",
     "            return 0\n",
     "        if type(f) in {float, int}:\n",
@@ -58,35 +58,39 @@
     "        if len(a.shape) == 1:\n",
     "            a = a.reshape(len(vec)//N, N)\n",
     "        if f is None:\n",
-    "            if higher:\n",
+    "            if higher: # central approximation of a dervative\n",
     "                a[:,:-1] = (np.roll(a[:,:-1], -1, axis = 1) - np.roll(a[:,:-1], 1, axis = 1))/2\n",
     "            else:\n",
     "                a[:,:-1] = a[:,:-1] - np.roll(a[:,:-1], 1, axis = 1)\n",
     "        else:\n",
+    "            # if a finction f given output d f(vec) / dx instead of d(vec)/dx\n",
     "            if higher:\n",
     "                a[:,:-1] = (self.vectorized(f, np.roll(a[:,:-1], -1, axis = 1)) - self.vectorized(f, np.roll(a[:,:-1], 1, axis = 1)))/2\n",
     "            else:\n",
     "                a[:,:-1] = self.vectorized(f, a[:,:-1]) - self.vectorized(f, np.roll(a[:,:-1], 1, axis = 1))\n",
-    "        a[:,-1] = a[:,0]\n",
+    "        a[:,-1] = a[:,0] # enforce periodic boundary condions\n",
     "        if flatten:\n",
     "            return a.flatten()\n",
     "        return a\n",
     "    \n",
     "    def initialization(self, W, T, X, diff = True):\n",
+    "        \n",
     "        dx, dt = X[1]-X[0], T[1]-T[0]\n",
     "        # If only one noise given, reshape it to a 3d array with one noise.\n",
     "        if len(W.shape) == 2:\n",
     "            W.reshape((1,W.shape[0], W.shape[1]))\n",
     "        if diff:\n",
+    "            # Outups dW\n",
     "            dW = np.zeros(W.shape)\n",
     "            dW[:,1:,:] = np.diff(W, axis = 1)\n",
     "        else:\n",
+    "            # Outputs W*dt\n",
     "            dW = W*dt\n",
     "        \n",
     "        return dW, dx, dt\n",
     "        \n",
     "        \n",
-    "    def Parabolic_Matrix(self, N, dt, dx, inverse = True): #(N+1)x(N+1) Matrix approximating (I-\\Delta*dt)^{-1}\n",
+    "    def Parabolic_Matrix(self, N, dt, dx, inverse = True): #(N+1)x(N+1) Matrix approximating (Id - eps * \\Delta*dt)^{-1}\n",
     "        # 'D' corresponds to Dirichlet, 'N' to Neuman, 'P' to periodic BC\n",
     "        # Approximate sceletot of the Laplacian\n",
     "        A = np.diag(-2 * np.ones(N + 1)) + np.diag(np.ones(N), k=1) + np.diag(np.ones(N), k=-1) \n",
@@ -99,9 +103,14 @@
     "        \n",
     "        if inverse:\n",
     "            return  np.linalg.inv(np.identity(N + 1) - self.eps*dt * A / (dx ** 2))\n",
+    "        \n",
+    "        # Matrix approximation of eps * \\Delta*dt\n",
     "        return self.eps*dt * A / (dx ** 2)\n",
     "    \n",
-    "    def KdV_Matrix(self, N, dt, dx, inverse = True):\n",
+    "    def KdV_Matrix(self, N, dt, dx, inverse = True): \n",
+    "        # Matrix approximating or (Id-eps*\\partial_{xxx}*dt)^{-1} or eps*\\partial_{xxx}*dt for potential application \n",
+    "        # of the KdV equation\n",
+    "        \n",
     "        # Approximate sceletot of the Laplacian\n",
     "        A = np.diag(-np.ones(N), k=1) + np.diag(np.ones(N), k=-1) + np.diag(np.ones(N-1)/2, k=2) + np.diag(-np.ones(N-1)/2, k=-2)\n",
     "\n",
@@ -127,7 +136,7 @@
     "        if self.type == \"B\" or self.type == \"Burgers\":\n",
     "            return self.Burgers(W)\n",
     "    \n",
-    "    # Solves 1D Parabolic semilinear SPDEs, given numpy array of several noises and space time domain\n",
+    "    # Solves 1D Parabolic semilinear SPDEs, given numpy array of several noises, space time domain and initial conditions\n",
     "    def Parabolic(self, W, T = None, X = None, diff = True):\n",
     "        if T is None: T = self.T\n",
     "        if X is None: X = self.X\n",
@@ -139,6 +148,7 @@
     "\n",
     "        Solution = np.zeros(shape = W.shape)\n",
     "        \n",
+    "        # define initial conditions\n",
     "        if type(self.IC) is np.ndarray:\n",
     "            if self.IC.shape == (W.shape[0], len(X)): #if initial conditions are given\n",
     "                IC = self.IC\n",
@@ -148,11 +158,13 @@
     "            initial = self.vectorized(self.IC, X) # setting initial condition for one solution\n",
     "            IC = np.array([initial for _ in range(W.shape[0])]) #for every solution\n",
     "        \n",
-    "        \n",
+    "        # Initialize\n",
     "        Solution[:,0,:] = IC\n",
     "        \n",
+    "        # Finite difference method.\n",
     "        # u_{n+1} = u_n + (dx)^{-2} A*u_{n+1}*dt + mu(u_n)*dt + sigma(u_n)*dW_{n+1}\n",
     "        # Hence u_{n+1} = (I - dt/(dx)^2 A)^{-1} (u_n + mu(u_n)*dt + sigma(u_n)*dW_{n+1})\n",
+    "        # Solve equations in paralel for every noise/IC simultaneosly\n",
     "        for i in range(1,len(T)):\n",
     "            current = Solution[:,i-1,:] + self.mu_(Solution[:,i-1,:]) * dt + self.sigma_(Solution[:,i-1,:]) * dW[:,i,:]\n",
     "            Solution[:,i,:] = np.dot(current.reshape((W.shape[0], len(X))), M)\n",
@@ -160,9 +172,11 @@
     "        # Because Solution.iloc[i-1] and thus current is a vector of length len(noises)*len(X)\n",
     "        # need to reshape it to matrix of the shape (W.shape[0], len(X)) and multiply on the right by the M^T (transpose).\n",
     "        # M*(current.reshape(...)) does not give the correct value.\n",
-    "            \n",
+    "        \n",
+    "        \n",
     "        return Solution\n",
     "    \n",
+    "    # Solves 1D stochasrtic Wave equation, given numpy array of several noises and space time domain\n",
     "    def Wave(self, W, T = None, X = None, diff = True):\n",
     "        if T is None: T = self.T\n",
     "        if X is None: X = self.X\n",
@@ -170,14 +184,20 @@
     "        # Extract specae-time increments and dW\n",
     "        dW, dx, dt = self.initialization(W, T, X, diff)\n",
     "        \n",
-    "        A = self.Parabolic_Matrix(len(X)-1, dt, dx, inverse = False).T\n",
+    "        A = self.Parabolic_Matrix(len(X)-1, dt, dx, inverse = False).T # eps*\\Delta*dt\n",
+    "        \n",
+    "        # Arrays of solution and its time derivative\n",
     "        Solution, Solution_t = np.zeros(shape = W.shape), np.zeros(shape = W.shape)\n",
     "        \n",
+    "        # Define fixed initial conditions for every realizarion of the noise \n",
     "        initial, initial_t = self.vectorized(self.IC, X), self.vectorized(self.IC_t, X)\n",
     "\n",
+    "        # Initialize\n",
     "        Solution[:,0,:] = np.array([initial for _ in range(W.shape[0])])\n",
     "        Solution_t[:,0,:] = np.array([initial_t for _ in range(W.shape[0])])\n",
     "        \n",
+    "        # Finite difference method.\n",
+    "        # Solve wave equation as a system for (Solution, Solition_t)\n",
     "        for i in tqdm(range(1, len(T))):\n",
     "        \n",
     "            Solution_t[:,i,:] = Solution_t[:,i-1,:] + np.dot(Solution[:,i-1,:].reshape((W.shape[0], len(X))), A)  + self.mu_(Solution[:,i-1,:]) * dt + self.sigma_(Solution[:,i-1,:]) * dW[:,i,:]\n",
@@ -185,6 +205,7 @@
     "            \n",
     "        return Solution\n",
     "    \n",
+    "    # Solves 1D Burger's equation, given numpy array of several noises, space time domain and initial conditions\n",
     "    def Burgers(self, W, lambd = 1, diff = True, T = None, X = None, KdV = False):    \n",
     "        # Extract increments, columns, time points and noise names\n",
     "        if T is None: T = self.T\n",
@@ -193,13 +214,19 @@
     "        # Extract specae-time increments and dW\n",
     "        dW, dx, dt = self.initialization(W, T, X, diff)\n",
     "        \n",
-    "        self.BC = 'P'\n",
-    "        if KdV:\n",
+    "        # Burger's equation is solved only with periodic boundary conditions due to a slightly easier computation of\n",
+    "        # of spatial derivative. \n",
+    "        \n",
+    "        self.BC = 'P' \n",
+    "        if KdV: # If KdV equation is considered\n",
     "            M = self.KdV_Matrix(len(X)-1, dt, dx).T\n",
     "        else:\n",
     "            M = self.Parabolic_Matrix(len(X)-1, dt, dx).T #M = (I-\\Delta*dt)^{-1}\n",
     "\n",
     "        Solution = np.zeros(shape = W.shape)\n",
+    "        \n",
+    "        # define initial conditions\n",
+    "    \n",
     "        if type(self.IC) is np.ndarray:\n",
     "            if self.IC.shape == (W.shape[0], len(X)): #if initial conditions are given\n",
     "                IC = self.IC\n",
@@ -209,18 +236,22 @@
     "            initial = self.vectorized(self.IC, X) # setting initial condition for one solution\n",
     "            IC = np.array([initial for _ in range(W.shape[0])]) #for every solution\n",
     "        \n",
+    "        # Initialize\n",
     "        Solution[:,0,:] = IC\n",
-    "\n",
-    "        # u_{n+1} = u_n + (dx)^{-2} A*u_{n+1}*dt - ((u^+_n)^2 - (u^-_n)^2)*dt/(2dx) + sigma(u_n)*dW_{n+1}\n",
-    "        # Hence u_{n+1} = (I - dt/(dx)^2 A)^{-1} (u_n -((u^+_n)^2 - (u^-_n)^2)*dt/(2dx) + sigma(u_n)*dW_{n+1})\n",
+    "        \n",
+    "        # Finite difference method.\n",
+    "        # u_{n+1} = u_n + (dx)^{-2} A*u_{n+1}*dt - u_n(u^+_n - u_n)*dt/dx + sigma(u_n)*dW_{n+1}\n",
+    "        # Hence u_{n+1} = (I - dt/(dx)^2 A)^{-1} (u_n -u_n(u^+_n - u_n)*dt/dx + sigma(u_n)*dW_{n+1})\n",
     "        for i in tqdm(range(1, len(T))):\n",
-    "            #print(self.discrete_diff(Solution[:,i-1,:], len(X), higher = False).shape)\n",
+    "            \n",
     "            current = Solution[:,i-1,:] - lambd*Solution[:,i-1,:]*self.discrete_diff(Solution[:,i-1,:], len(X), flatten = False, higher = False)*dt/dx + self.sigma_(Solution[:,i-1,:]) * dW[:,i,:]\n",
     "            Solution[:,i,:] = np.dot(current.reshape((W.shape[0], len(X))), M)\n",
     "            \n",
     "        return Solution\n",
     "    \n",
-    "    # Function that integrates trees required for the model\n",
+    "    # Function that integrates trees required for the model. It applies operator I in paralel to many functions\n",
+    "    # where I[f] is a solution to (\\partial_t - eps*\\Delta) I[f] = f with zero IC.\n",
+    "    \n",
     "    def Integrate_Parabolic_trees(self, tau, done = {}, exceptions = {}, derivative = False):\n",
     "    \n",
     "        #extract the trees from dictionary which are not purely polyniomials and were not already integrated\n",
@@ -234,7 +265,8 @@
     "        taus = np.array([tau[t] for t in trees])\n",
     "\n",
     "        integrated = np.zeros(shape = (len(trees), len(self.T), len(self.X)))\n",
-    "\n",
+    "        \n",
+    "        # Finite difference method.\n",
     "        # Compute M*(integrated[i-1]+taus[i]). M^T (transpose) and reshaping for the same reason as in Parabolic_many\n",
     "        for i in range(1,len(self.T)): \n",
     "            integrated[:,i,:] = np.dot((integrated[:,i-1,:] + taus[:,i,:] * dt).reshape((len(trees), len(self.X))), M)\n",
@@ -243,11 +275,16 @@
     "        for i, t in enumerate(trees): #update dictionary and return integrated taus.\n",
     "            Jtau['I[{}]'.format(t)] = integrated[i]\n",
     "            if derivative and \"I'[{}]\".format(t) not in exceptions:\n",
+    "                # If derivative is true include also functions of the form \\partial_x I[f] that are denoted as I'[f]\n",
     "                if derivative == 1 or derivative is True:\n",
     "                    Jtau[\"I'[{}]\".format(t)] = self.discrete_diff(integrated[i], len(self.X), flatten = False, higher = False)/dx\n",
     "                else:\n",
+    "                    # centralised differentiation\n",
     "                    Jtau[\"I'[{}]\".format(t)] = self.discrete_diff(integrated[i], len(self.X), flatten = False, higher = True)/dx\n",
     "        return Jtau\n",
+    "    \n",
+    "    # Function that integrates trees required for the model. It applies operator I in paralel to many functions\n",
+    "    # where I[f] is a solution to (\\partial^2_t - eps*\\Delta) I[f] = f with zero IC.\n",
     "    \n",
     "    def Integrate_Wave_trees(self, tau, done = {}, exceptions = {}, derivative = False):\n",
     "        \n",
@@ -256,14 +293,17 @@
     "\n",
     "        dt, dx = self.T[1]-self.T[0], self.X[1]-self.X[0] \n",
     "        \n",
-    "        # approximate inverse of (I - Laplacian)\n",
+    "        # approximate Laplacian\n",
     "        A = self.Parabolic_Matrix(len(self.X)-1, dt, dx, inverse=False).T\n",
     "\n",
     "        taus = np.array([tau[t] for t in trees])\n",
-    "\n",
+    "        \n",
+    "        # Initialize placeholders for I[f] and \\partial_t I[f]\n",
     "        integrated = np.zeros(shape = (len(trees), len(self.T), len(self.X)))\n",
     "        integrated_t = np.zeros(shape = (len(trees), len(self.T), len(self.X)))\n",
-    "\n",
+    "        \n",
+    "        # Finite difference method.\n",
+    "        # Solve wave equation as a system for (integrated, integrated_t)\n",
     "        for i in range(1,len(self.T)):\n",
     "            \n",
     "            integrated_t[:,i,:] = integrated_t[:,i-1,:] + np.dot(integrated[:,i-1,:].reshape((len(trees), len(self.X))), A) + taus[:,i,:] * dt\n",
@@ -273,6 +313,7 @@
     "        for i, t in enumerate(trees): #update dictionary and return integrated taus.\n",
     "            Jtau['I[{}]'.format(t)] = integrated[i]\n",
     "            if derivative and \"I'[{}]\".format(t) not in exceptions:\n",
+    "                # If derivative is true include also functions of the form \\partial_x I[f] that are denoted as I'[f]\n",
     "                if derivative == 1 or derivative is True:\n",
     "                    Jtau[\"I'[{}]\".format(t)] = self.discrete_diff(integrated[i], len(self.X), flatten = False, higher = False)/dx\n",
     "                else:\n",
@@ -282,7 +323,10 @@
     "    #To finish\n",
     "        \n",
     "    def save(self, Solution, name):\n",
-    "        Solution.to_csv(name)\n",
+    "        # create a multilevel dataframe and save as a csv file\n",
+    "        columns = pd.MultiIndex.from_product([['S'+str(i+1) for i in range(Solution.shape[0])], self.X])\n",
+    "        solution = pd.Dataframe(Solution, index = self.T, columns = columns)\n",
+    "        solution.to_csv(name)\n",
     "        \n",
     "    def upload(self, name):\n",
     "        Data = pd.read_csv(name, index_col = 0, header = [0,1])\n",
@@ -290,6 +334,13 @@
     "        \n",
     "        return Data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
