Visualisation class for the Burger's experiment

--- a/full_visualization.ipynb
+++ b/full_visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
     "            P = Prediction[\"S\"+str(self.test[k]+1)].values\n",
     "        return raw(P,S)\n",
     "    \n",
-    "    def errors(self, Solution, Prediction, raw = err2, postpros = np.sqrt, full = True, show = True, maxi = False):\n",
+    "    def errors(self, Solution, Prediction, raw = err2, full = True, show = True, maxi = False):\n",
     "        \n",
     "        # compute full errors between all solution and prediction\n",
     "        \n",
@@ -203,8 +203,8 @@
     "            max_er = max(max_er, self.one_error(k, Solution, Prediction))\n",
     "        \n",
     "        if full:\n",
-    "            if show: print(\"Total relative error for all test cases:\", postpros(er/l2))\n",
-    "            return postpros(er/l2)\n",
+    "            if show: print(\"Total relative error for all test cases:\", er/l2)\n",
+    "            return er/l2\n",
     "        else:\n",
     "            if show: print(\"Average error over all test cases:\", av_er/len(self.test))\n",
     "            if maxi: \n",
