Algorithm 2 for Burger's equation

--- a/Algorithm_2.ipynb
+++ b/Algorithm_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
     "\n",
     "class IML():\n",
     "    \n",
-    "    def __init__(self, Solutions, Rule, height, deg, step = 1, Noise = None, diff = True, train = None, test = None, trees = None, T = None, X = None):\n",
+    "    def __init__(self, Solutions, Rule, height, deg, eps = 1, step = 1, Noise = None, diff = True, train = None, test = None, trees = None, T = None, X = None):\n",
     "        \n",
     "        if type(Solutions) == pd.core.frame.DataFrame:\n",
     "            n = Solutions.columns.levshape[0]\n",
@@ -94,18 +94,18 @@
     "        # If set of trees in the model is not given create a small toy model and extract trees from there\n",
     "        if trees is None:\n",
     "                W_toy = np.zeros((1, 2, 2))\n",
-    "                if Type == 'P':\n",
+    "                if self.Type in {'P', 'Parabolic'}:\n",
     "                    I = SPDE(X = [0,1], T = [0,1]).Integrate_Parabolic_trees\n",
-    "                elif Type == 'W':\n",
+    "                elif self.Type in {'W','Wave'}:\n",
     "                    I = SPDE(X = [0,1], T = [0,1]).Integrate_Wave_trees\n",
     "                M_toy = Model(I, self.R, self.H, self.deg, derivative = self.diff)\n",
     "                # In this experiment only extra trees that are allowed are derivatives of I_c[u_0]\n",
     "                # One should generalize this part in order to apply Algorithm 2 to a Wave Equation with zero forcing and \"random\" initial conditions\n",
     "                if self.diff: \n",
-    "                    M_toy.create_model_list(W_toy, lollipops = W_toy, diff = False, extra_planted = W_toy, extra_deg = -0.5, key = \"I'[xi]\")\n",
+    "                    M_toy.create_model_list(W_toy, dt = 1, lollipops = W_toy, diff = False, extra_planted = W_toy, extra_deg = -0.5, key = \"I'[xi]\")\n",
     "                    self.trees = list(M_toy.models[0].keys())\n",
     "                else:\n",
-    "                    M_toy.create_model_list(W_toy, lollipops = W_toy, diff = False)\n",
+    "                    M_toy.create_model_list(W_toy, dt = 1, lollipops = W_toy, diff = False)\n",
     "                    self.trees = list(M_toy.models[0].keys())\n",
     "        else:\n",
     "            self.trees = trees\n",
@@ -113,7 +113,7 @@
     "    def initialize_Predictions(self):\n",
     "        self.Pred = np.zeros((len(self.T),len(self.X),len(self.test)))\n",
     "        # Set initial condition of the predictions to be the known vsalues of the solutions from test set\n",
-    "        self.Pred[0] = np.array([self.Sol[a].iloc[0] for a in self.test]).T \n",
+    "        self.Pred[0] = self.Sol[self.test, 0, :].T\n",
     "        \n",
     "    def cut_off(self, vec): # Cut off fucnction that kills too big values if the algorith blows up\n",
     "        Max = self.cut_off_size*self.max\n",
@@ -132,12 +132,12 @@
     "        if test is None: test = self.test\n",
     "        if train is None: train = self.train\n",
     "        \n",
-    "        l, dx = len(test) + len(train), X[1]-X[0]\n",
+    "        l, dx, dt = len(test) + len(train), X[1]-X[0], T[1]-T[0]\n",
     "        IC = np.zeros((l, len(X)))\n",
     "        if train == []: # By default only compute models for the initial conditons (u^pr_{t_k}) from test set\n",
     "            IC = self.cut_off(Prediction[start].T)\n",
     "        else: # Compute models for both train and test sets at this initial conditions\n",
-    "            IC[train] = np.array([self.Sol[t].iloc[start].values for t in train])\n",
+    "            IC[train] = self.Sol[train, start, :]\n",
     "            IC[test] = self.cut_off(Prediction[start].T)\n",
     "            \n",
     "\n",
@@ -157,9 +157,9 @@
     "        M = Model(I, self.R, self.H, self.deg, derivative = self.diff)\n",
     "        # create models\n",
     "        if self.diff: \n",
-    "            M.create_model_list(W_, diff=False, lollipops = lollipop, extra_planted = lollipop_diff, extra_deg = -0.5, key = \"I'[xi]\")\n",
+    "            M.create_model_list(W_, dt = dt, diff=False, lollipops = lollipop, extra_planted = lollipop_diff, extra_deg = -0.5, key = \"I'[xi]\")\n",
     "        else:\n",
-    "            M.create_model_list(W_, diff=False, lollipops = lollipop)\n",
+    "            M.create_model_list(W_, dt = dt, diff=False, lollipops = lollipop)\n",
     "            \n",
     "        return M.models\n",
     "\n",
@@ -177,7 +177,7 @@
     "        # where m is the number of solutions in the training set, N = len(T) . Overall m*(N-1) initial conditions\n",
     "        \n",
     "        # Initializing IC\n",
-    "        IC = np.array([self.Sol[u].iloc[i].values for u in train for i in range(len(T)-1)])\n",
+    "        IC = np.array([self.Sol[u, i, :] for u in train for i in range(len(T)-1)])\n",
     "\n",
     "        W_ = np.zeros((IC.shape[0], time_grid_num+1, len(X))) # No noise is present.\n",
     "        \n",
@@ -197,9 +197,9 @@
     "        print(\"Creating Model\")\n",
     "        \n",
     "        if self.diff: \n",
-    "            M.create_model_list(W_, diff=False, lollipops = lollipop, extra_planted = lollipop_diff, extra_deg = -0.5, key = \"I'[xi]\")\n",
+    "            M.create_model_list(W_, dt = dt, diff=False, lollipops = lollipop, extra_planted = lollipop_diff, extra_deg = -0.5, key = \"I'[xi]\")\n",
     "        else:\n",
-    "            M.create_model_list(W_, diff=False, lollipops = lollipop)\n",
+    "            M.create_model_list(W_, dt = dt, diff=False, lollipops = lollipop)\n",
     "            \n",
     "        self.M_train = M.models\n",
     "        \n",
@@ -211,7 +211,7 @@
     "        if trees is None: trees = self.trees\n",
     "        \n",
     "        # Labels\n",
-    "        y = np.array([self.Sol[u].iloc[i].values for u in train for i in range(1,len(T))])\n",
+    "        y = np.array([self.Sol[u, i, :] for u in train for i in range(1,len(T))])\n",
     "        # Features\n",
     "        x = np.array([np.array([Mu[m][-1] for m in trees]) for Mu in self.M_train])\n",
     "        \n",
@@ -300,6 +300,13 @@
     "        return Predicted\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
