Noise and initial condition generating class

--- a/Noise.ipynb
+++ b/Noise.ipynb
@@ -60,7 +60,7 @@
     "    \n",
     "    # Funciton for creating N random initial conditions of the form \n",
     "    # \\sum_{i = -p}^{i = p} a_k sin(k*\\pi*x/scale)/ (1+|k|^decay) where a_k are i.i.d standard normal.\n",
-    "    def initial(N, X, p = 10, decay = 2, scaling = 1):\n",
+    "    def initial(self, N, X, p = 10, decay = 2, scaling = 1):\n",
     "        scale = max(X)/scaling\n",
     "        IC = []\n",
     "        SIN = np.array([[np.sin(k*np.pi*x/scale)/((np.abs(k)+1)**decay) for k in range(-p,p+1)] for x in X])\n",
