Algorithm 2 for Burger's equation

--- a/Algorithm_2.ipynb
+++ b/Algorithm_2.ipynb
@@ -70,7 +70,7 @@
     "        self.regression_fit = {x: None for x in self.X} # placeholder for linear fit at each space point\n",
     "        self.Type = \"Parabolic\" # type od PDE. Set to Parabolic by default \n",
     "        self.BC = \"P\" # Boundary conditions. Set to Periodic by default\n",
-    "        self.eps = 1 # viscosity\n",
+    "        self.eps = eps # viscosity\n",
     "        self.noise = Noise\n",
     "    \n",
     "    def set_train_test(self, train = None, test = None, test_size = 0.3):\n",
