--- a/SPDEs.ipynb
+++ b/SPDEs.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "class SPDE():\n",
     "    \n",
-    "    def __init__(self, Type = 'P', IC = lambda x: 0, IC_t = lambda x: 0, mu = None, sigma = 1, BC = 'D', eps = 1, T = None, X = None):\n",
+    "    def __init__(self, Type = 'P', IC = lambda x: 0, IC_t = lambda x: 0, mu = None, sigma = 1, BC = 'P', eps = 1, T = None, X = None):\n",
     "        self.type = Type # write down an elliptic (\"E\") or parabolic (\"P\") type\n",
     "        self.IC = IC # Initial condition for the parabolic equations\n",
     "        self.IC_t = IC_t # Initial condition for the time derivative\n",
@@ -96,7 +96,7 @@
     "        A = np.diag(-2 * np.ones(N + 1)) + np.diag(np.ones(N), k=1) + np.diag(np.ones(N), k=-1) \n",
     "        if self.BC == 'D': # if Dirichlet BC adjust # u(X[0]) = u(X[N]) = 0\n",
     "            A[0,0], A[0,1], A[1,0], A[-1,-1], A[-1,-2], A[-2,-1] = 0, 0, 0, 0, 0, 0\n",
-    "        if self.BC == 'N': # if Dirichlet BC adjust # u(X[0]) = u(X[N]) = 0\n",
+    "        if self.BC == 'N': # if Neuman BC adjust\n",
     "            A[0,1], A[-1,-2] = 2, 2\n",
     "        if self.BC == 'P':\n",
     "            A[-1, 1], A[0, -2] = 1, 1\n",
