Class that creates Models

--- a/Model.ipynb
+++ b/Model.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,13 @@
     "                if IZ[1] == \"[\":\n",
     "                    done[IZ] = done[Z] + self.R.degrees['I']  # add degree to IZ  \n",
     "                else:  \n",
-    "                    done[IZ] = done[Z] + self.R.degrees['I'] - 1 \n",
+    "                    done[IZ] = done[Z] + self.R.degrees['I'] - 1\n",
+    "        \n",
+    "        # delete all the trees of the form \\partial_x I[\\tau] and only keep\n",
+    "        # trees of the form I[\\tau]\n",
+    "        \n",
+    "        if self.derivative:\n",
+    "            model = {IZ: model[IZ] for IZ in model if IZ[1] != \"'\"}\n",
     "\n",
     "        return model\n",
     "\n",
@@ -153,7 +159,7 @@
     "\n",
     "        num_noises = W.shape[0]\n",
     "        \n",
-    "        if diff:\n",
+    "        if diff: \n",
     "            dW = np.zeros(W.shape)\n",
     "            dW[:,1:,:] = np.diff(W, axis = 1)/dt\n",
     "        else:\n",
