--- a/Algorithm_2.ipynb
+++ b/Algorithm_2.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
     "        \n",
     "        return vec*f(vec)+Max*np.sign(vec)*(np.abs(vec) >= Max)\n",
     "    \n",
-    "    def new_model(self, start, Prediction = None, T = None, X = None, test = None, train = []):\n",
+    "    def new_model(self, start, Prediction = None, T = None, X = None, test = None, train = [], time_grid_num = 10):\n",
     "        \n",
     "        # Creates models for a given set of initial conditions\n",
     "        \n",
@@ -139,32 +139,32 @@
     "        else: # Compute models for both train and test sets at this initial conditions\n",
     "            IC[train] = self.Sol[train, start, :]\n",
     "            IC[test] = self.cut_off(Prediction[start].T)\n",
-    "            \n",
-    "\n",
-    "        W_ = np.zeros((l, self.step+1, len(X))) # No noise is present. \n",
+    "        \n",
+    "        time_grid = np.linspace(T[start], T[start+self.step], time_grid_num+1) \n",
+    "        W_ = np.zeros((l, time_grid_num+1, len(X))) # No noise is present. \n",
     "        \n",
     "        # Compute I_c[u^pr_{t_k}]. Symbolically these will still be denoted by I[xi] in the model.\n",
-    "        lollipop = SPDE(Type = self.Type, BC = self.BC, eps = self.eps, IC = IC).Parabolic(W_, T[start: start+self.step+1], X)\n",
-    "        \n",
-    "        # Initialize integration map I\n",
-    "        I = SPDE(eps = self.eps, BC = self.BC, X = self.X, T = T[start: start+self.step+1]).Integrate_Parabolic_trees\n",
+    "        lollipop = SPDE(Type = self.Type, BC = self.BC, eps = self.eps, IC = IC).Parabolic(W_, time_grid, X)\n",
     "        \n",
     "        # Add \\partial_c I_c[u^pr_{t_k}] which will be symbolically denoted by I'[xi]\n",
     "        if self.diff:\n",
     "            lollipop_diff = [SPDE().discrete_diff(lol, N = len(X), flatten=False, higher = False)/dx for lol in lollipop]\n",
     "        \n",
-    "        # initialize model object\n",
+    "        # Initialize integration map I\n",
+    "        I = SPDE(eps = self.eps, BC = self.BC, X = self.X, T = time_grid).Integrate_Parabolic_trees\n",
+    "        \n",
+    "        # initialize model class\n",
     "        M = Model(I, self.R, self.H, self.deg, derivative = self.diff)\n",
     "        # create models\n",
     "        if self.diff: \n",
-    "            M.create_model_list(W_, dt = dt, diff=False, lollipops = lollipop, extra_planted = lollipop_diff, extra_deg = -0.5, key = \"I'[xi]\")\n",
+    "            M.create_model_list(W_, dt = dt/time_grid_num, diff=False, lollipops = lollipop, extra_planted = lollipop_diff, extra_deg = -0.5, key = \"I'[xi]\")\n",
     "        else:\n",
-    "            M.create_model_list(W_, dt = dt, diff=False, lollipops = lollipop)\n",
+    "            M.create_model_list(W_, dt = dt/time_grid_num, diff=False, lollipops = lollipop)\n",
     "            \n",
     "        return M.models\n",
     "\n",
     "    # Create models for training. (Step 1 of Algorith 2)\n",
-    "    def training_models(self, T = None, X = None, train = None, time_grid_num = 1):\n",
+    "    def training_models(self, T = None, X = None, train = None, time_grid_num = 10):\n",
     "        \n",
     "        if T is None: T = self.T\n",
     "        if X is None: X = self.X\n",
@@ -197,9 +197,9 @@
     "        print(\"Creating Model\")\n",
     "        \n",
     "        if self.diff: \n",
-    "            M.create_model_list(W_, dt = dt, diff=False, lollipops = lollipop, extra_planted = lollipop_diff, extra_deg = -0.5, key = \"I'[xi]\")\n",
+    "            M.create_model_list(W_, dt = dt/time_grid_num, diff=False, lollipops = lollipop, extra_planted = lollipop_diff, extra_deg = -0.5, key = \"I'[xi]\")\n",
     "        else:\n",
-    "            M.create_model_list(W_, dt = dt, diff=False, lollipops = lollipop)\n",
+    "            M.create_model_list(W_, dt = dt/time_grid_num, diff=False, lollipops = lollipop)\n",
     "            \n",
     "        self.M_train = M.models\n",
     "        \n",
@@ -215,7 +215,7 @@
     "        # Features\n",
     "        x = np.array([np.array([Mu[m][-1] for m in trees]) for Mu in self.M_train])\n",
     "        \n",
-    "        for i in range(len(X)):\n",
+    "        for i in tqdm(range(len(X))):\n",
     "            x_ = x[:,:,i]\n",
     "            y_ = y[:,i]\n",
     "            if prepro: # normalise data if needed\n",
