--- a/Wave_Numerics.ipynb
+++ b/Wave_Numerics.ipynb
@@ -49,7 +49,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [04:21<00:00,  3.82it/s]\n"
+      "100%|██████████| 1000/1000 [04:19<00:00,  3.85it/s]\n"
      ]
     }
    ],
@@ -65,16 +65,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:00<00:00, 23086.73it/s]\n",
-      "100%|██████████| 1000/1000 [00:00<00:00, 36149.69it/s]\n",
-      "100%|██████████| 1000/1000 [00:02<00:00, 366.89it/s]\n"
+      "100%|██████████| 1000/1000 [00:00<00:00, 28262.17it/s]\n",
+      "100%|██████████| 1000/1000 [00:00<00:00, 45256.74it/s]\n",
+      "100%|██████████| 1000/1000 [00:03<00:00, 327.14it/s]\n"
      ]
     }
    ],
@@ -97,14 +97,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [06:22<00:00,  2.61it/s]\n"
+      " 45%|████▍     | 449/1000 [04:00<03:21,  2.74it/s]"
      ]
     }
    ],
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,8 +194,9 @@
     "t, x = -1, 50 # Point where prediction will be made\n",
     "E = Experiment(t, x, t, x)\n",
     "E.F = Features_for_points[(t,x)]\n",
-    "E.one_experiment(None, Wave, split = True)\n",
-    "E.show_regression_experiment()"
+    "E.L = Wave[:,t,x]\n",
+    "E.one_experiment(split = True)\n",
+    "E.show_regression_experiment(metric = err2)"
    ]
   },
   {
@@ -250,8 +251,9 @@
     "t, x = -1, 50 # Point where prediction will be made\n",
     "E2 = Experiment(t, x, t, x)\n",
     "E2.F = Features_for_points[(t,x)][no_speed]\n",
-    "E2.one_experiment(None, Wave, split = True)\n",
-    "E2.show_regression_experiment()"
+    "E2.L = Wave[:,t,x]\n",
+    "E2.one_experiment(split = True)\n",
+    "E2.show_regression_experiment(metric = err2)"
    ]
   },
   {
@@ -306,8 +308,9 @@
     "t, x = -1, 50 # Point where prediction will be made\n",
     "E3 = Experiment(t, x, t, x)\n",
     "E3.F = Features_for_points[(t,x)][no_initial]\n",
-    "E3.one_experiment(None, Wave, split = True)\n",
-    "E3.show_regression_experiment()"
+    "E3.L = Wave[:,t,x]\n",
+    "E3.one_experiment(split = True)\n",
+    "E3.show_regression_experiment(metric = err2)"
    ]
   },
   {
@@ -325,8 +328,11 @@
     }
    ],
    "source": [
-    "er, t = E.many_regression_experiments(1000)\n",
-    "er_no_speed, t_no_speed = E2.many_regression_experiments(1000)"
+    "repeat_num = 1000\n",
+    "er, std, t, r = E.many_regression_experiments(repeat_num)\n",
+    "er_no_v, std_no_v, t_no_v, r_no_v = E2.many_regression_experiments(repeat_num)\n",
+    "er, std, t, r = round(100*er, 2), round(100*std, 2), round(t, 3), round(r, 3)\n",
+    "er_no_v, std_no_v, t_no_v, r_no_v = round(100*er_no_v, 2), round(100*std_no_v, 2), round(t_no_v, 3), round(r_no_v, 3)"
    ]
   },
   {
@@ -344,7 +350,7 @@
     }
    ],
    "source": [
-    "print(\"Average Error for full model:\", er)\n",
+    "print(\"Full model experiment. Avg Error: {}%. Avg Error Std {}%. Avg Slope {}. Avg R^2 {}.\".format(er1, std1, t1, r1)), er)\n",
     "print(\"Average Error for model without speed:\", er_no_speed)"
    ]
   },
