--- a/Burgers_Numerics2.ipynb
+++ b/Burgers_Numerics2.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Uploading the data of the same solutions and \n",
+    "# Uploading the data of the same solutions. Alternatively create data as in Burgers_Numerics1.ipynb\n",
     "\n",
     "Burgers_true = pd.read_csv(\"Burgers_fourier\", index_col=0, header = [0,1])\n",
     "Burgers_true = [Burgers_true[\"S\"+str(i)] for i in range(1, Burgers_true.columns.levshape[0]+1)]\n",
