--- a/Burgers_Numerics2.ipynb
+++ b/Burgers_Numerics2.ipynb
@@ -144,29 +144,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:47<00:00, 47.76s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Coefficients of equation obtained from PDE-FIND regression:\n",
-      "Viscocity coef: 0.046130675141419684, Non-lin coef: -0.9155164763382361.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      " 10%|█         | 1/10 [00:52<07:52, 52.50s/it]"
      ]
     }
    ],
@@ -175,7 +160,7 @@
     "\n",
     "# Number of equations used for the PDE-FIND algorithm\n",
     "learning_samples = num_samples-len(test) \n",
-    "learning_samples = 1\n",
+    "# learning_samples = 10\n",
     "\n",
     "u = np.array([Burgers_noise[i] for i in range(len(Burgers_noise)) if i not in test])\n",
     "\n",
