--- a/Wave_Numerics.ipynb
+++ b/Wave_Numerics.ipynb
@@ -6,12 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run SPDEs.ipynb\n",
-    "%run Rule.ipynb\n",
-    "%run Noise.ipynb\n",
-    "%run Algorithm_1.ipynb\n",
-    "%run Model.ipynb\n",
-    "%run Experiment.ipynb"
+    "%run Classes/SPDEs.ipynb\n",
+    "%run Classes/Rule.ipynb\n",
+    "%run Classes/Noise.ipynb\n",
+    "%run Algorithms/Algorithm_1.ipynb\n",
+    "%run Classes/Model.ipynb\n",
+    "%run Classes/Experiment.ipynb"
    ]
   },
   {
