--- a/Classes/Model.ipynb
+++ b/Classes/Model.ipynb
@@ -171,14 +171,22 @@
     "                \n",
     "            if lollipops is None: # No precomputed values of I[dW] \n",
     "                if extra_planted is None: # No trees of the form u^i, i in \\mathcal{J}\n",
-    "                    self.models.append(self.create_one_model(dW[i]))\n",
+    "                    M = self.create_one_model(dW[i])\n",
     "                else: # Add u^i to the 0-th height of the model\n",
-    "                    self.models.append(self.create_one_model(dW[i], extra_planted = {key : extra_planted[i]}, extra_deg = {key : extra_deg}))\n",
+    "                    if type(key) == str: # if only one key from \\mathcal{J} and its not given as a dictionary {key: degree}\n",
+    "                        M = self.create_one_model(dW[i], extra_planted = {key : extra_planted[i]}, extra_deg = {key : extra_deg})\n",
+    "                    else: \n",
+    "                        M = self.create_one_model(dW[i], extra_planted = {a : extra_planted[a][i] for a in key}, extra_deg = extra_deg)\n",
     "            else: # I[dW] is already given\n",
     "                if extra_planted is None:\n",
-    "                    self.models.append(self.create_one_model(dW[i], lollipops[i]))\n",
+    "                    M = self.create_one_model(dW[i], lollipops[i])\n",
     "                else:\n",
-    "                    self.models.append(self.create_one_model(dW[i], lollipops[i], {key: extra_planted[i]}, {key : extra_deg}))\n",
+    "                    if type(key) == str:\n",
+    "                        M = self.create_one_model(dW[i], lollipops[i], {key: extra_planted[i]}, {key : extra_deg})\n",
+    "                    else:\n",
+    "                        M = self.create_one_model(dW[i], lollipops[i], {a : extra_planted[a][i] for a in key}, extra_deg)\n",
+    "            \n",
+    "            self.models.append(M)\n",
     "            \n",
     "        self.size = num_noises\n",
     "        \n",
