--- a/Wave_Numerics.ipynb
+++ b/Wave_Numerics.ipynb
@@ -364,14 +364,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Repeating Experiment without trees containinc initial speed 1000 times.\n",
+      "Repeating Experiment without trees containing initial speed 1000 times.\n",
       "Height = 1, Avg Error: 55.83%. Avg Error Std 54.5%. Avg Slope 0.034. Avg R^2 0.027.\n",
       "Height = 2, Avg Error: 11.99%. Avg Error Std 13.18%. Avg Slope 0.95. Avg R^2 0.948.\n",
       "Height = 3, Avg Error: 4.49%. Avg Error Std 4.65%. Avg Slope 0.994. Avg R^2 0.993.\n",
@@ -380,7 +380,7 @@
     }
    ],
    "source": [
-    "print('Repeating Experiment without trees containinc initial speed {} times.'.format(repeat_num))\n",
+    "print('Repeating Experiment without trees containing initial speed {} times.'.format(repeat_num))\n",
     "print(\"Height = {}, Avg Error: {}%. Avg Error Std {}%. Avg Slope {}. Avg R^2 {}.\".format(1, er1, std1, t1, r1))\n",
     "print(\"Height = {}, Avg Error: {}%. Avg Error Std {}%. Avg Slope {}. Avg R^2 {}.\".format(2, er2, std2, t2, r2))\n",
     "print(\"Height = {}, Avg Error: {}%. Avg Error Std {}%. Avg Slope {}. Avg R^2 {}.\".format(3, er3, std3, t3, r3))\n",
