--- a/Classes/Experiment.ipynb
+++ b/Classes/Experiment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,9 @@
     "from time import time\n",
     "from sklearn import linear_model\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score"
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
+    "\n",
+    "err2 = lambda x, y: np.sqrt(mean_squared_error(x,y))"
    ]
   },
   {
@@ -150,7 +152,7 @@
     "\n",
     "        return\n",
     "\n",
-    "    def regression_error(self, metric = mean_absolute_error, scale = True):\n",
+    "    def regression_error(self, metric = err2, scale = True):\n",
     "\n",
     "        if self.learning_model is None:\n",
     "            print('There is not model created.')\n",
@@ -170,7 +172,7 @@
     "        return self.error/scale_factor, self.error_std, self.tangent, self.r2\n",
     "\n",
     "    # Perform several experiments to deduce the average error and a slope for this model\n",
-    "    def many_regression_experiments(self, num, Models = None, Results = None, test_size=0.3, metric = mean_absolute_error, scale = True, columns = None, mini = False, maxi = False):\n",
+    "    def many_regression_experiments(self, num, Models = None, Results = None, test_size=0.3, metric = err2, scale = True, columns = None, mini = False, maxi = False):\n",
     "\n",
     "        errors, deviations, tangents, r2 = [], [], [], []\n",
     "\n",
