--- a/Classes/full_visualization.ipynb
+++ b/Classes/full_visualization.ipynb
@@ -96,7 +96,7 @@
     "        \n",
     "        print(\"Error between solution and prediction at space point {} is : {}.\".format(X[x], error(P,S)))\n",
     "        \n",
-    "    def full_comparison(self, k, Solution, Prediction, error = Error2, cmap = \"coolwarm\", show_title = False):\n",
+    "    def full_comparison(self, k, Solution, Prediction, error = Error2, cmap = \"coolwarm\", show_title = True):\n",
     "        \n",
     "        # Heatmaps of k-th solution and prediction. All space-time values\n",
     "        \n",
@@ -114,15 +114,16 @@
     "        fig, axs = plt.subplots(1, 2, figsize=(16, 6))\n",
     "        if show_title:\n",
     "            fig.suptitle('Heatmaps for solution and prediction. Test case {}. Relative l2 error: {}'.format(k+1 ,round(er,4)))\n",
+    "            axs[0].set_title(\"Solution\", fontsize = 15)\n",
+    "            axs[1].set_title(\"Prediction\", fontsize = 15)\n",
+    "            \n",
     "        sns.color_palette(cmap, as_cmap=True)\n",
     "        sns.heatmap(np.array(S.T).astype(np.float64), ax=axs[0], \n",
     "                    xticklabels=20, yticklabels=40, cmap = cmap)\n",
-    "        axs[0].set_title(\"Solution\", fontsize = 15)\n",
     "        axs[0].set_xlabel('Time', fontsize = 15)\n",
     "        axs[0].set_ylabel('Space', fontsize = 15)\n",
     "        sns.heatmap(np.array(P.T).astype(np.float64), ax=axs[1], \n",
     "                    xticklabels=20, yticklabels=40, cmap = cmap)\n",
-    "        axs[1].set_title(\"Prediction\", fontsize = 15)\n",
     "        axs[1].set_xlabel('Time', fontsize = 15)\n",
     "        axs[1].set_ylabel('Space', fontsize = 15)\n",
     "        plt.show();\n",
