--- a/Burgers_Numerics2.ipynb
+++ b/Burgers_Numerics2.ipynb
@@ -6,13 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run SPDEs.ipynb\n",
-    "%run Rule.ipynb\n",
-    "%run Model.ipynb\n",
-    "%run Noise.ipynb\n",
-    "%run full_visualization.ipynb\n",
-    "%run Algorithm_2.ipynb\n",
-    "%run Burgers_PDE_FIND.ipynb"
+    "%run Classes/SPDEs.ipynb\n",
+    "%run Classes/Rule.ipynb\n",
+    "%run Classes/Model.ipynb\n",
+    "%run Classes/Noise.ipynb\n",
+    "%run Classes/full_visualization.ipynb\n",
+    "%run Algorithms/Algorithm_2.ipynb\n",
+    "%run Classes/Burgers_PDE_FIND.ipynb"
    ]
   },
   {
