--- a/Algorithms/Algorithm_2.ipynb
+++ b/Algorithms/Algorithm_2.ipynb
@@ -27,9 +27,9 @@
     "Error1 = lambda x, y: err1(x,y)/err1(np.zeros(y.shape), y)\n",
     "Error2 = lambda x, y: err2(x,y)/err2(np.zeros(y.shape), y)\n",
     "\n",
-    "%run SPDEs.ipynb\n",
-    "%run Rule.ipynb\n",
-    "%run Model.ipynb"
+    "%run Classes/SPDEs.ipynb\n",
+    "%run Classes/Rule.ipynb\n",
+    "%run Classes/Model.ipynb"
    ]
   },
   {
