--- a/Burgers_Numerics2.ipynb
+++ b/Burgers_Numerics2.ipynb
@@ -336,23 +336,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Numerical Scheme failed for 2 equation with the above coeficients.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Predicted values on the noisy data. Outliers that blow up during the experiment are excluded\n",
     "\n",
-    "Prediction_noise = experiment_noise.to_df_list()\n",
+    "Prediction_noise = experiment_noise_.to_df_list()\n",
     "\n",
-    "outliers = [i for i in range(len(test)) if show_prediction.one_error(i, Burgers_true, Prediction_noise) > 0.5]\n",
+    "outliers = [i for i in range(len(test)) if show_prediction.one_error(i, Burgers_true, Prediction_noise) > 1]\n",
     "test_no_outliers = [test[i] for i in range(len(test)) if i not in outliers]\n",
     "Prediction_noise = [Prediction_noise[i] for i in range(len(test)) if i not in outliers]\n",
     "\n",
